--- a/package.json
+++ b/package.json
@@ -20,6 +20,21 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^4.3.1",
+        "@fullcalendar/daygrid": "^4.3.0",
+        "@fullcalendar/interaction": "^4.3.0",
+        "@fullcalendar/timegrid": "^4.3.0",
+        "@fullcalendar/vue": "^4.3.1",
+        "moment": "^2.24.0",
+        "moment-range": "^4.0.2",
+        "validate.js": "^0.13.1",
+        "vue-js-modal": "^1.3.31",
+        "vue-router": "^3.1.3",
+        "vue2-datepicker": "^2.13.3",
+        "vuex": "^3.1.1"
     }
 }
